[gd_scene load_steps=4 format=3 uid="uid://m18krvbg7fgh"]

[ext_resource type="Theme" uid="uid://dnjawm4lkym68" path="res://addons/HTNDomainManager/PluginSystem/PluginTheme.tres" id="1_awa56"]
[ext_resource type="Script" path="res://addons/HTNDomainManager/PluginSystem/Nodes/PrimitiveNode/NodeField/NodeField.gd" id="1_u78rw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8adwr"]

[node name="NodeField" type="HBoxContainer"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme = ExtResource("1_awa56")
script = ExtResource("1_u78rw")

[node name="VarName" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Variable Name"

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_8adwr")

[node name="BooleanParameter" type="CheckButton" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="StringParameter" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="VectorParameter" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="XValue" type="SpinBox" parent="VectorParameter"]
unique_name_in_owner = true
layout_mode = 2

[node name="YValue" type="SpinBox" parent="VectorParameter"]
unique_name_in_owner = true
layout_mode = 2

[node name="ZValue" type="SpinBox" parent="VectorParameter"]
unique_name_in_owner = true
layout_mode = 2

[node name="UnsupportedParameter" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "\"Sorry! I currently don't support this data type as of this version.
Please use the filesystem to edit the property value in the inspector.\""
mouse_filter = 0
text = "Unsupported Data Type"
horizontal_alignment = 1
